fix for z-index on timeline

--- a/public/app.css
+++ b/public/app.css
@@ -37,6 +37,8 @@ path {
 
 .music-tour-timeline {
   width: 100%;
+  height: 50px;
+  z-index: 2;
 }
 
 .music-tour-timeline-line {
@@ -47,7 +49,17 @@ path {
   margin: 15px 0 17px 0;
   position: absolute;
   width: 790px;
-  z-index: -1;
+  z-index: 1;
+}
+
+.music-tour-forward {
+  float: right;
+  z-index: 2;
+  position: relative;
+}
+.music-tour-backward {
+  position: absolute;
+  z-index: 2;
 }
 
 .music-tour-timeline-points {
@@ -72,8 +84,14 @@ path {
 }
 
 .music-tour-map {
+  background-color: #fff;
   margin: auto;
+  padding-top: 20px;
   width: 100%;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, .3);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, .3);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, .3);
+  border-radius: 3px;
 }
 
 .music-tour-openers,
